kamoso (2.0.2++git20130122-2) UNRELEASED; urgency=low

  * New upstream release.
  * Remove about_dialog.diff, applied upstream.
  * Refresh proper_version_kaboutdata.diff.
  * Bump debhelper compatibility level to 9. This enables the hardening flags.
  * Add watch file.
  * Update Vcs-* fields.

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Tue, 22 Jan 2013 16:10:49 +0100

kamoso (2.0.2-1) unstable; urgency=low

  * Initial release (Closes: #577639)

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Sun, 24 Jul 2011 01:20:38 +0200