@@ -16,10 +16,3 @@ Description: Avoids building the plugin tester.
  
  set(kamoso_SRCS
  	burstshootmode.cpp
-@@ -58,4 +58,4 @@ endif(HAVE_NEPOMUK)
- 
- install(TARGETS kamoso ${INSTALL_TARGETS_DEFAULT_ARGS})
- install(FILES kamoso.desktop DESTINATION ${XDG_APPS_INSTALL_DIR} )
--install(FILES kamosoplugin.desktop DESTINATION ${SERVICETYPES_INSTALL_DIR})
-\ No newline at end of file
-+install(FILES kamosoplugin.desktop DESTINATION ${SERVICETYPES_INSTALL_DIR})
